--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.X.X
+        dotnet-version: 6.x.x
 
     - run: dotnet tool install -g Microsoft.dotnet-interactive
     - run: dotnet interactive jupyter install
